--- a/MyProject.uproject
+++ b/MyProject.uproject
@@ -86,6 +86,14 @@
 				"Win32",
 				"Win64"
 			]
+		},
+		{
+			"Name": "MultiUserClient",
+			"Enabled": true
+		},
+		{
+			"Name": "BackUp",
+			"Enabled": true
 		}
 	]
 }
